# python-rust

./: .gitignore  Cargo.toml  README.md  _manylinux.sh  build-manylinux-wheels.sh  build_manylinux.sh  requirements.txt  setup.py  tests.py
.github/workflows/: manylinux.yml  tests.yml
mylib/: __init__.py
src/rust/: lib.rs
