[package]
name = "mylib"
version = "0.1.0"
edition = "2018"

[lib]
name = "mylib"
crate-type = ["cdylib"]  # tells the compiler that our module will be a dynamic library: a .dll file on Windows, .so on Linux, or .dylib on Mac.

[dependencies.cpython]
version = "0.6.0"
features = ["extension-module"]